refactor : review response 수정
- 이미지와 totalcount 추가